# ascii-art

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs  string_to_image.rs  utilities.rs
src/alg/: black_white.rs  greyscale.rs  mod.rs  naive.rs
tests/: greyscale.rs
www/: index.html  index.js  package-lock.json  package.json
