[package]
name = "ascii_art"
version = "0.1.0"
authors = ["Binod Shrestha <binodnme08@gmail.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.23.6"
imageproc = "0.22.0"
rusttype = "0.9.2"
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
